--- a/templates/personal-diagnosis-content.html
+++ b/templates/personal-diagnosis-content.html
@@ -18,6 +18,7 @@
   <title>top</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/common.css">
+  <link rel="stylesheet" href="css/personal-diagnosis-content.css">
 </head>
 
 <body>
@@ -46,9 +47,34 @@
       </div>
     </div>
   </nav>
-  
-  
-  <main></main>
+
+  <main>
+    <h1>パーソナル診断</h1>
+    <p class="question-text">Q1</p>
+    <div>
+      <p>あなたが植物を置きたい場所は?</p>
+    </div>
+    <div id="select-question">
+      <div class="question-img-wrap">
+        <img src="./images/question1-1.jpg" alt="test1">
+        <div>
+          <a href="personal-diagnosis-telling.html" class="button">屋内</a>
+        </div>
+      </div>
+      <div class="question-img-wrap">
+        <img src="./images/question1-2.jpg" alt="test2">
+        <div>
+          <a href="personal-diagnosis-telling.html" class="button">屋外</a>
+        </div>
+      </div>
+    </div>
+    <div id="progress-bar-wrap">
+      <p>1/6</p>
+      <div id="progress-bar">
+        <div></div>
+      </div>
+    </div>
+  </main>
   <footer></footer>
 
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"
