--- a/templates/personal-diagnosis-telling.html
+++ b/templates/personal-diagnosis-telling.html
@@ -14,10 +14,14 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
 
   <title>top</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/common.css">
+  <link rel="stylesheet" href="css/flower-fortune-telling.css">
 </head>
 
 <body>
@@ -46,9 +50,36 @@
       </div>
     </div>
   </nav>
-  
-  
-  <main></main>
+
+
+  <main>
+    <div id="main-wrap">
+      <div class="title-text">診断結果</div>
+      <div class="contents-wrap">
+        <div class="flower-wrap">
+          <div class="flower-image">
+            <img src="./images/testimage.jpg" alt="flower">
+          </div>
+          <div class="flower-text">
+            <h1>モンステラ</h1>
+              <p>
+                ハート型や、大きな切れ目の入った葉が魅力的なモンステラ。
+                自生しているものでは、高さ2mを超えるほど大きく育つこともあるんですよ。
+              </p>
+              <div>
+                <!-- ページ完成次第変更 -->
+                <a href="item-search-result.html" class="button">検索ページに飛んでみる ></a>
+              </div>
+          </div>
+        </div>
+        <div id="flower-language-wrap">
+            <h1>Language of Flowers</h1>
+            <p>花言葉</p>
+            <p id="flower-language">嬉しい便り・壮大な計画</p>
+        </div>
+      </div>
+    </div>
+  </main>
   <footer></footer>
 
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"
