--- a/templates/column-details.html
+++ b/templates/column-details.html
@@ -17,7 +17,7 @@
 
   <title>top</title>
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/common.css">
+  <link rel="stylesheet" href="css/column-details.css">
 </head>
 
 <body>
@@ -48,7 +48,29 @@
   </nav>
   
   
-  <main></main>
+  <main>
+
+    <div class="top-input">
+      <input type="text" placeholder="入力欄">
+      <a href="" class="button-sent">送信</a>
+    </div>
+
+    <div class="keijiban">
+      <ul class="naiyou">
+        <li>2023/10/12 12:00 〇〇〇〇</li>
+        <li class="li-t">ここにテキストが入ります</li>
+      </ul>
+      <ul class="naiyou">
+        <li>2023/10/12 12:00 〇〇〇〇</li>
+        <li class="li-t">ここにテキストが入ります</li>
+      </ul>
+      <ul class="naiyou">
+        <li>2023/10/12 12:00 〇〇〇〇</li>
+        <li class="li-t">ここにテキストが入ります</li>
+      </ul>
+    </div>
+
+  </main>
   <footer></footer>
 
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"
