--- a/templates/login.html
+++ b/templates/login.html
@@ -16,9 +16,9 @@
   <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300&display=swap" rel="stylesheet">
 
   <title>top</title>
-  <link rel="stylesheet" href="/static/css/reset.css">
-  <link rel="stylesheet" href="/static/css/common.css">
-  <link rel="stylesheet" href="/static/css/login.css">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/common.css">
+  <link rel="stylesheet" href="css/login.css">
 </head>
 
 <body>
@@ -52,7 +52,7 @@
   <main>
     <div class="form-wrapper">
       <h1>ログイン</h1>
-      <form method="POST" action="/login">
+      <form>
         <div class="form-item">
           <label for="email"></label>
           <input type="email" name="email" required="required" placeholder="メールアドレス"></input>
