--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /* login */
 /* Simple Reset */
-* { margin: 0; padding: 0; box-sizing: border-box; }
+* { margin: 0; padding: 0;}
 
 /* body */
 body {
