--- a/templates/Exchange-accepted.html
+++ b/templates/Exchange-accepted.html
@@ -17,6 +17,7 @@
 
   <title>top</title>
   <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/common.css">
   <link rel="stylesheet" href="css/Exchange-accepted.css">
 </head>
 
@@ -47,6 +48,7 @@
     </div>
   </nav>
   
+  <div id="header-space"></div>
   
   <main>
 
