--- a/templates/personal-diagnosis-start.html
+++ b/templates/personal-diagnosis-start.html
@@ -56,6 +56,8 @@
       </div>
     </nav>
 
+    <div id="header-space"></div>
+
       <main class="start">
         <div id="title">
           <h1>パーソナル診断</h1>
