--- a/templates/top.html
+++ b/templates/top.html
@@ -55,6 +55,7 @@
         </div>
       </div>
     </nav>
+    <div id="header-space"></div>
     <div id="wallpaper">Hortus</div>
 
     <main id="top">
