add: template(unsafe)

--- a/templates/Bulletin-board-posting.html
+++ b/templates/Bulletin-board-posting.html
@@ -17,7 +17,7 @@
 
   <title>top</title>
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/column-details.css">
+  <link rel="stylesheet" href="css/Bulletin-board-posting.css">
 </head>
 
 <body>
@@ -47,36 +47,30 @@
     </div>
   </nav>
   
+  
   <main>
 
-
-
-    <div>
-
-
-      <h3>タイトル</h3>        
-
-
-      <p id="time">2023-11-01</p>
-
-      <div id="img">
-        <img src="" alt="">        
-      </div>
-
-
-      <div id="main-txt-div">
-      <p id="main-txt">
-        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-
-      </p>
-      </div>
-
-
-
+    <div class="taitle">
+      <h3>タイトル</h3>
+      <input type="text" class="T-input">
     </div>
+
+    <div class="korami-naiyou">
+      <h3>コラム内容</h3>
+      <input type="text" class="C-input">
+    </div>
+
+    <div class="botton">
+      <ul>
+        <li>
+          <a href="">戻る</a>
+        </li>
+        <li>
+          <a href="">投稿</a>
+        </li>
+      </ul>
+    </div>
+
 
   </main>
   <footer></footer>
