--- a/templates/Information-change_password.html
+++ b/templates/Information-change_password.html
@@ -15,9 +15,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@300&display=swap" rel="stylesheet">
 
-  <title>top</title>
+  <title>会員登録変更(メールアドレス、ユーザー名)</title>
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/column-details.css">
+  <link rel="stylesheet" href="css/common.css">
+  <link rel="stylesheet" href="css/Information-change-pass.css">
 </head>
 
 <body>
@@ -36,10 +37,10 @@
         <a href="item-search-result.html">商品を探す</a>
       </div>
       <div class="nav-text">
-        <a href="#">コラム</a>
+        <a href="column.html">コラム</a>
       </div>
       <div class="nav-text">
-        <a href="#">掲示板</a>
+        <a href="bulletin-board.html">掲示板</a>
       </div>
       <div class="nav-text">
         <a href="top.html">トップに戻る</a>
@@ -47,36 +48,40 @@
     </div>
   </nav>
   
+  
   <main>
+    <div class="wrapper">
+      <div class="Information-change-all">
+
+        <div class="Information-change-h2">
+            <h2>会員登録変更(パスワード)</h2>
+        </div>
+
+          <form>
+            
+            <div class="Information-change-form">
+              <div class="container">
+                  <label for="pwd"><p>パスワード</p></label>
+                  <input type="password" placeholder="" name="pwd" id="pwd" required />
+              </div>
+              
+              <div class="container2">
+                  <label for="pwd-repeat"><p>パスワード再入力</p></label>
+                  <input type="password" placeholder="" name="pwd-repeat" id="pwd-repeat" required />
+              </div>
+
+            </div>
+
+            <div class="Information-change-button">
+              <button type="submit"><a href="Mypage.html">変更</a></button>
+            </div>
 
 
-
-    <div>
-
-
-      <h3>タイトル</h3>        
-
-
-      <p id="time">2023-11-01</p>
-
-      <div id="img">
-        <img src="" alt="">        
-      </div>
-
-
-      <div id="main-txt-div">
-      <p id="main-txt">
-        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-
-      </p>
-      </div>
-
-
+          </form>
 
     </div>
+
+  </div>
 
   </main>
   <footer></footer>
