--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -17,7 +17,7 @@
 
   <title>top</title>
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/column-details.css">
+  <link rel="stylesheet" href="css/mypage.css">
 </head>
 
 <body>
@@ -46,37 +46,28 @@
       </div>
     </div>
   </nav>
-  
+
+
   <main>
-
-
+    <div class="container">
+      <div class="icon">
+        <img src="./images/myicon.png" alt="icon">
+      </div>
+      <div class="user-details">
+        <p>名前：山田 太郎</p>
+        <p>email: example@gmail.com</p>
+        <p>pas : ********</p>
+        <p>住所:</p>
+        <p>クレジット:****-****-****-****</p>
+        <p>入会日:2023/01/01</p>
+      </div>
+    </div>
 
     <div>
-
-
-      <h3>タイトル</h3>        
-
-
-      <p id="time">2023-11-01</p>
-
-      <div id="img">
-        <img src="" alt="">        
-      </div>
-
-
-      <div id="main-txt-div">
-      <p id="main-txt">
-        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-
-      </p>
-      </div>
-
-
-
+      <p class="Listing-button"><a href="???.html">出品物を見る</a></p>
+      <p class="inquiry"<a href="???.html">問い合わせはこちら</a></p>
     </div>
+ 
 
   </main>
   <footer></footer>
