--- a/templates/thread.html
+++ b/templates/thread.html
@@ -17,7 +17,7 @@
 
   <title>top</title>
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/column-details.css">
+  <link rel="stylesheet" href="css/thread.css">
 </head>
 
 <body>
@@ -47,35 +47,22 @@
     </div>
   </nav>
   
+  
   <main>
 
-
-
-    <div>
-
-
-      <h3>タイトル</h3>        
-
-
-      <p id="time">2023-11-01</p>
-
-      <div id="img">
-        <img src="" alt="">        
-      </div>
-
-
-      <div id="main-txt-div">
-      <p id="main-txt">
-        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-
-      </p>
-      </div>
-
-
-
+    <div class="keijiban">
+      <ul class="naiyou">
+        <li>2023/10/12 12:00 〇〇〇〇</li>
+        <li class="li-t">ここにテキストが入ります</li>
+      </ul>
+      <ul class="naiyou">
+        <li>2023/10/12 12:00 〇〇〇〇</li>
+        <li class="li-t">ここにテキストが入ります</li>
+      </ul>
+      <ul class="naiyou">
+        <li>2023/10/12 12:00 〇〇〇〇</li>
+        <li class="li-t">ここにテキストが入ります</li>
+      </ul>
     </div>
 
   </main>
