--- a/templates/waiting-approval.html
+++ b/templates/waiting-approval.html
@@ -17,7 +17,8 @@
 
   <title>top</title>
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/column-details.css">
+  <link rel="stylesheet" href="css/common.css">
+  <link rel="stylesheet" href="css/waiting-approval.css">
 </head>
 
 <body>
@@ -47,37 +48,32 @@
     </div>
   </nav>
   
-  <main>
-
-
-
-    <div>
-
-
-      <h3>タイトル</h3>        
-
-
-      <p id="time">2023-11-01</p>
-
-      <div id="img">
-        <img src="" alt="">        
-      </div>
-
-
-      <div id="main-txt-div">
-      <p id="main-txt">
-        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-
-      </p>
-      </div>
-
-
-
-    </div>
-
+  
+  <main id="waiting">
+    <div id="wrap">
+      <div id="unity">
+        <h1>
+          交換了承待ち確認ページ
+        </h1>
+          <div id="product">
+            <h2>
+              【相手の名前】様<br>
+                相手の商品名〇〇〇
+            </h2>
+            <figure>
+              <div id="opponent-product">
+                <td><a href="product-detail.html"><img src="images/koukan.jpg" alt="交換相手の商品"></a></td>
+              </div><!--opponent-productの終わり-->
+              <div id="own-product">
+                <h1>
+                  自分が出品した商品名〇〇〇<br>
+                  返信待ち
+                </h1>
+              </div>
+            </figure>
+          </div><!--productの終わり-->
+      </div><!--unityの終わり-->
+    </div><!--wrapの終わり-->
   </main>
   <footer></footer>
 
