--- a/templates/logout.html
+++ b/templates/logout.html
@@ -17,7 +17,8 @@
 
   <title>top</title>
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/column-details.css">
+  <link rel="stylesheet" href="css/common.css">
+  <link rel="stylesheet" href="css/logout.css">
 </head>
 
 <body>
@@ -47,37 +48,18 @@
     </div>
   </nav>
   
-  <main>
-
-
-
-    <div>
-
-
-      <h3>タイトル</h3>        
-
-
-      <p id="time">2023-11-01</p>
-
-      <div id="img">
-        <img src="" alt="">        
-      </div>
-
-
-      <div id="main-txt-div">
-      <p id="main-txt">
-        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-        テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
-
-      </p>
-      </div>
-
-
-
-    </div>
-
+  
+  <main id="logout">
+    <div id="wrap">
+      <div id="logoutpage">
+        <h1>
+            ログアウトされました。
+        </h1>
+          <div id="button">
+            <a href="main.html">トップページに戻る</a>
+          </div><!--buttonの終わり-->
+      </div><!--logoutpageの終わり-->
+    </div><!--wrapの終わり-->
   </main>
   <footer></footer>
 
