--- a/static/css/common.css
+++ b/static/css/common.css
@@ -13,6 +13,12 @@ main {
   min-height: 100vh;
 }
 
+br {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+}
+
 #nav-logo {
   display: inline-block;
   height: 100%;
