--- a/templates/login.html
+++ b/templates/login.html
@@ -81,7 +81,7 @@
         </div>
       </form>
       <div class="form-footer">
-        <p><a href="registration.html">新規作成</a></p>
+        <p><a href="{{ url_for('auth.signup') }}">新規作成</a></p>
       </div>
     </div>
   </main>
