--- a/templates/login.html
+++ b/templates/login.html
@@ -74,6 +74,9 @@
             {% endfor %}
           </p>
         </div>
+        <p>
+          {{ form.is_keep_login }} {{ form.is_keep_login.label }}
+        </p>
         <div class="button-panel">
           <p class="button">
             {{ form.submit() }}
@@ -89,7 +92,7 @@
 
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"
     integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-  <script src="js/common.js"></script>
+  <script src="{{ url_for('static', filename='js/common.js') }}"></script>
 </body>
 
 </html>
