--- a/templates/registration.html
+++ b/templates/registration.html
@@ -28,6 +28,7 @@
       <div class="open-btn"><span></span><span></span><span></span></div>
     </div>
   </header>
+  <div id="header-space"></div>
   <nav class="nav-disable">
     <div id="nav-wrap">
       <div class="nav-text">
