--- a/templates/login.html
+++ b/templates/login.html
@@ -60,7 +60,7 @@
             {{ form.email.label }}<br>
             {{ form.email(size=64) }}<br>
             {% for error in form.email.errors %}
-            <span style="color: rgb(217, 57, 57);">[{{ error }}]</span>
+            <span style="color: rgb(217, 57, 57);">{{ error }}</span>
             {% endfor %}
           </p>
         </div>
@@ -70,7 +70,7 @@
             {{ form.password.label }}<br>
             {{ form.password(size=64) }}<br>
             {% for error in form.password.errors %}
-            <span style="color: rgb(217, 57, 57);">[{{ error }}]</span>
+            <span style="color: rgb(217, 57, 57);">{{ error }}</span>
             {% endfor %}
           </p>
         </div>
