--- a/templates/top.html
+++ b/templates/top.html
@@ -39,7 +39,12 @@
     <nav class="nav-disable">
       <div id="nav-wrap">
         <div class="nav-text">
-          <a href="login.html">ログイン</a>
+          <!-- ログインしているユーザー名を返す -->
+          {% if current_user.is_authenticated %}
+            <a href="mypage.html">{{ current_user.name }}</a>
+          {% else %}
+          <a href="{{ url_for('auth.login') }}">ログイン</a>
+          {% endif %}
         </div>
         <div class="nav-text">
           <a href="item-search-result.html">商品を探す</a>
