add: error message

--- a/templates/login.html
+++ b/templates/login.html
@@ -72,6 +72,7 @@
             {% for error in form.password.errors %}
             <span style="color: rgb(217, 57, 57);">{{ error }}</span>
             {% endfor %}
+            <span style="color: rgb(217, 57, 57);">{{ err }}</span>
           </p>
         </div>
         <p>
