--- a/templates/login.html
+++ b/templates/login.html
@@ -47,9 +47,9 @@
       </div>
     </div>
   </nav>
-  
+
   <div id="header-space"></div>
-  
+
   <main>
     <div class="form-wrapper">
       <h1>ログイン</h1>
@@ -72,7 +72,11 @@
             {% for error in form.password.errors %}
             <span style="color: rgb(217, 57, 57);">{{ error }}</span>
             {% endfor %}
-            <span style="color: rgb(217, 57, 57);">{{ err }}</span>
+            {% with messages = get_flashed_messages() %}
+            {% for message in messages %}
+            <span style="color: rgb(217, 57, 57);">{{ message }}</span>
+            {% endfor %}
+            {% endwith %}
           </p>
         </div>
         <p>
