--- a/templates/registration.html
+++ b/templates/registration.html
@@ -48,47 +48,68 @@
       </div>
     </div>
   </nav>
-  
+
   <div id="header-space"></div>
-  
+
   <main>
     <div class="wrapper">
-        <div class="registration-all">
+      <div class="registration-all">
 
-            <div class="registration-h2">
-                <h2>アカウントを新規登録</h2>
-            </div>
-
-              <form>
-                
-                <div class="regitration-form">
-                  <div class="container">
-                      <label for="username"><p>ユーザー名</p></label>
-                      <input type="text" placeholder="" name="username" id="username" required />
-              
-                      <label for="email"><p>メールアドレス</p></label>
-                      <input type="text" placeholder="" name="email" id="email" required />
-              
-                      <label for="pwd"><p>パスワード</p></label>
-                      <input type="password" placeholder="" name="pwd" id="pwd" required />
-              
-                      <label for="pwd-repeat"><p>パスワード再入力</p></label>
-                      <input type="password" placeholder="" name="pwd-repeat" id="pwd-repeat" required />
-
-                      <div>
-                        <p>アカウントをお持ちの方は<a href="login.html">こちら</a></p>
-                      </div>
-                  </div>
-                </div>
-
-                
-                <div class="regitration-button">
-                  <button type="submit">登録</button>
-                </div>
-
-              </form>
-
+        <div class="registration-h2">
+          <h2>アカウントを新規登録</h2>
         </div>
+
+        <form action="" method="post">
+
+          <div class="regitration-form">
+            <div class="container">
+              <p>
+                {{ form.name.label }}<br>
+                {{ form.name(size=64) }}<br>
+                {% for error in form.name.errors %}
+                <span style="color: rgb(217, 57, 57);"> {{ error }}</span>
+                {% endfor %}
+              </p>
+              
+              <p>
+                {{ form.email.label }}<br>
+                {{ form.email(size=64) }}<br>
+                {% for error in form.email.errors %}
+                <span style="color: rgb(217, 57, 57);"> {{ error }}</span>
+                {% endfor %}
+              </p>
+              
+              <p>
+                {{ form.password.label }}<br>
+                {{ form.password(size=64) }}<br>
+                {% for error in form.password.errors %}
+                <span style="color: rgb(217, 57, 57);"> {{ error }}</span>
+                {% endfor %}
+              </p>
+              
+              <p>
+                {{ form.confirm_password.label }}<br>
+                {{ form.confirm_password(size=64) }}<br>
+                {% for error in form.confirm_password.errors %}
+                <span style="color: rgb(217, 57, 57);"> {{ error }}</span>
+                {% endfor %}
+              </p>
+
+              <div>
+                <p>アカウントをお持ちの方は<a href="{{ url_for('auth.login') }}">こちら</a></p>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="regitration-button">
+            {{ form.submit() }}
+            <!-- <button type="submit">登録</button> -->
+          </div>
+
+        </form>
+
+      </div>
     </div>
   </main>
   <footer></footer>
