--- a/templates/top.html
+++ b/templates/top.html
@@ -24,9 +24,9 @@
     />
 
     <title>top</title>
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/common.css" />
-    <link rel="stylesheet" href="css/top.css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/reset.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/common.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/top.css') }}">
   </head>
 
   <body>
