--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -66,9 +66,9 @@
 
     <div>
       <p class="Listing-button"><a href="???.html">出品物を見る</a></p>
-      <p class="inquiry"<a href="???.html">問い合わせはこちら</a></p>
+      <p class="inquiry"><a href="???.html">問い合わせはこちら</a></p>
+      <p class="inquiry"><a href="{{ url_for('auth.logout') }}">ログアウト</a></p>
     </div>
- 
 
   </main>
   <footer></footer>
