--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -66,6 +66,7 @@
 
     <div>
       <p class="Listing-button"><a href="???.html">出品物を見る</a></p>
+      <p class="inquiry"><a href="{{ url_for('auth.logout') }}">出品する</a></p>
       <p class="inquiry"><a href="???.html">問い合わせはこちら</a></p>
       <p class="inquiry"><a href="{{ url_for('auth.logout') }}">ログアウト</a></p>
     </div>
@@ -75,7 +76,7 @@
 
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"
     integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-  <script src="js/common.js"></script>
+    <script src="{{ url_for('static', filename='js/common.js') }}"></script>
 </body>
 
 </html>
