[WIP]add: exhibit

--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -66,7 +66,7 @@
 
     <div>
       <p class="Listing-button"><a href="???.html">出品物を見る</a></p>
-      <p class="inquiry"><a href="{{ url_for('auth.logout') }}">出品する</a></p>
+      <p class="inquiry"><a href="{{ url_for('user.exhibit') }}">出品する</a></p>
       <p class="inquiry"><a href="???.html">問い合わせはこちら</a></p>
       <p class="inquiry"><a href="{{ url_for('auth.logout') }}">ログアウト</a></p>
     </div>
