--- a/static/css/product-listing.css
+++ b/static/css/product-listing.css
@@ -69,7 +69,7 @@ input[type="submit"]:hover {
     margin-right: 5px;
 }
 
-#itemPrice {
+#price {
     flex: 1; 
 }
 
@@ -105,7 +105,7 @@ input[type="submit"]:hover {
 }
 
 /* 画像アップロードエリア */
-#itemImage {
+#image {
     display: none;
 }
 
