--- a/templates/top.html
+++ b/templates/top.html
@@ -47,7 +47,7 @@
           {% endif %}
         </div>
         <div class="nav-text">
-          <a href="item-search-result.html">商品を探す</a>
+          <a href="{{ url_for('shop.shop_get') }}">商品を探す</a>
         </div>
         <div class="nav-text">
           <a href="#">コラム</a>
