--- a/templates/product-listing.html
+++ b/templates/product-listing.html
@@ -124,6 +124,14 @@
       </div>
 
       <div>
+        {% with messages = get_flashed_messages() %}
+          {% for message in messages %}
+            <span style="color: rgb(217, 57, 57);">{{ message }}</span>
+          {% endfor %}
+        {% endwith %}
+      </div>
+
+      <div>
         {{ form.submit() }}
       </div>
     </form>
@@ -134,7 +142,7 @@
 
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"
     integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-    <script src="{{ url_for('static', filename='js/listing.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/listing.js') }}"></script>
 </body>
 
 </html>
