--- a/templates/my-listing-detail.html
+++ b/templates/my-listing-detail.html
@@ -60,9 +60,9 @@
         <h2>{{ product_data.name }}</h2><br>
         <p>￥{{product_data.price}}(税込み・送料込み)</p><br>
         <!-- 他の商品情報を表示 -->
-        <button><a href="Change-details.html">商品を編集する</a></button><br><br>
+        <button><a href="{{ url_for('shop.product_payment', product_id = product_data.product_id) }}">商品を購入する</a></button><br><br>
         <h2>商品説明</h2><br>
-        <p> {{product_data_description}} </p><br><br><br>
+        <p> {{product_data.description}} </p><br><br><br>
         <p>商品の情報</p>
         <p>---------------------------------</p>
         <p>・{{ product_data.category_id }}</p>
@@ -72,8 +72,7 @@
         <p>・発送までの日数: {{product_data.shipping_days}}</p><br><br>
         <h2>出品者</h2>
         <p>----------------------------------</p>
-        <p>出品者名</p><br>
-        <p>----------------------------------</p>
+        <p>出品者名: {{ buy_user.name }}</p>
       </div>
     </section>
   </main>
@@ -82,7 +81,7 @@
 
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"
     integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-  <script src="js/common.js"></script>
+    <script src="{{ url_for('static', filename='js/common.js') }}"></script>
 </body>
 
 
