--- a/templates/product-listing.html
+++ b/templates/product-listing.html
@@ -124,10 +124,13 @@
       </div>
 
       <div>
+        {% for error in form.image.errors %}
+        <span style="color: rgb(217, 57, 57);">{{ error }}</span>
+        {% endfor %}
         {% with messages = get_flashed_messages() %}
-          {% for message in messages %}
-            <span style="color: rgb(217, 57, 57);">{{ message }}</span>
-          {% endfor %}
+        {% for message in messages %}
+        <span style="color: rgb(217, 57, 57);">{{ message }}</span>
+        {% endfor %}
         {% endwith %}
       </div>
 
