--- a/templates/item-search-result.html
+++ b/templates/item-search-result.html
@@ -105,7 +105,7 @@
         <li>
           <a href="{{ url_for('shop.product_detail', product_id = product.product_id) }}">
             <figure>
-              <img src="/{{product.images[0].image}}" class="item-images" alt="花1">
+              <img src="/{{product.images[0].image}}" class="item-images" alt="花">
             </figure>
             <h3> {{ product.name }} </h3>
             <p> {{ product.price }}円 </p>
