--- a/templates/user-guide.html
+++ b/templates/user-guide.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>ご利用ガイド</title>
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/common.css">
-  <link rel="stylesheet" href="css/user-guide.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/reset.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/common.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/user-guide.css') }}">
 </head>
 
 <body>
@@ -82,7 +82,7 @@
             hortusをご利用いただく際は、会員登録していただくと大変便利です&#12290;
             会員登録をするとスムーズに購入手続きが行えるほか、&#12300;マイページ&#12301;から購入履歴の確認などを行なっていただけます&#12290;<br>
         </p>
-        <a href="registration.html" id="user-guide-a">新規会員登録はこちらから</a>
+        <a href="{{ url_for('auth.signup') }}" id="user-guide-a">新規会員登録はこちらから</a>
       </div>
 
       <div id="area-3">
@@ -90,20 +90,20 @@
         <p id="user-guide-p">
           作成した際のメールアドレスとパスワードを入力することでログインすることが出来ます&#12290;<br>
         </p>
-        <a href="login.html" id="user-guide-a">ログインはこちらから</a>
+        <a href="{{ url_for('auth.login') }}" id="user-guide-a">ログインはこちらから</a>
       </div>
 
       <div id="area-4">
         <h2>出品方法</h2>
         <div class="user-guide-product-listing">
-          <p class="user-guide-img"><img src="images/guide-product-listing1.png" alt="商品出品画面"></p>
+          <p class="user-guide-img"><img src="{{ url_for('static', filename='images/guide-product-listing1.png') }}" alt="商品出品画面"></p>
           <p class="user-guide-img-p">&#9312;画像を選択します&#12290;</p>
         </div>
 
         <hr>
 
         <div class="user-guide-product-listing">
-          <p class="user-guide-img"><img src="images/guide-product-listing2.png" alt="商品出品画面"></p>
+          <p class="user-guide-img"><img src="{{ url_for('static', filename='images/guide-product-listing2.png') }}" alt="商品出品画面"></p>
           <p class="user-guide-img-p">&#9313;商品の名前を入力します&#12290;</p><br>
           <p class="user-guide-img-p">&#9314;商品の値段を入力します&#12290;</p>
         </div>
@@ -111,7 +111,7 @@
         <hr>
 
         <div class="user-guide-product-listing">
-          <p class="user-guide-img"><img src="images/guide-product-listing3.png" alt="商品出品画面"></p>
+          <p class="user-guide-img"><img src="{{ url_for('static', filename='images/guide-product-listing3.png') }}" alt="商品出品画面"></p>
           <p class="user-guide-img-p">&#9315;カテゴリーを決めます&#12290;</p><br>
           <p class="user-guide-img-p">&#9316;商品の状態を決めます&#12290;</p>
         </div>
@@ -119,7 +119,7 @@
         <hr>
         
         <div class="user-guide-product-listing">
-          <p class="user-guide-img"><img src="images/guide-product-listing4.png" alt="商品出品画面"></p>
+          <p class="user-guide-img"><img src="{{ url_for('static', filename='images/guide-product-listing4.png') }}" alt="商品出品画面"></p>
           <p class="user-guide-img-p">&#9317;商品の説明を入力します</p><br>
           <p class="user-guide-img-p">&#9318;物々交換でも良い場合はチェックをいれます</p>
         </div>
@@ -127,7 +127,7 @@
         <hr>
       
         <div class="user-guide-product-listing">
-          <p class="user-guide-img"><img src="images/guide-product-listing5.png" alt="商品出品画面"></p>
+          <p class="user-guide-img"><img src="{{ url_for('static', filename='images/guide-product-listing5.png') }}" alt="商品出品画面"></p>
           <p class="user-guide-img-p">&#9319;発送方法を決めます&#12290;</p><br>
           <p class="user-guide-img-p">&#9320;発送までの日数を決めます&#12290;</p><br>
           <p class="user-guide-img-p">&#9321;出品ボタンをクリックして完了です&#12290;</p>
@@ -137,7 +137,7 @@
       <div id="area-5">
         <h2>購入方法</h2>
         <div class="user-guide-purchase">
-          <p class="user-guide-img"><img src="images/guide-purchase1.png" alt="商品検索画面"></p>
+          <p class="user-guide-img"><img src="{{ url_for('static', filename='images/guide-purchase1.png') }}" alt="商品検索画面"></p>
           <p class="user-guide-img-p">&#9312;検索欄で欲しい商品を入力するかカテゴリから探します&#12290;</p><br>
           <p class="user-guide-img-p">&#9313;表示された商品をクリックします&#12290;</p>
         </div>
@@ -145,7 +145,7 @@
         <hr>
 
         <div class="user-guide-purchase">
-          <p class="user-guide-img"><img src="images/guide-purchase2.png" alt="商品画面"></p>
+          <p class="user-guide-img"><img src="{{ url_for('static', filename='images/guide-purchase2.png') }}" alt="商品画面"></p>
           <p class="user-guide-img-p">&#9314;購入するボタンをクリックして完了です&#12290;</p><br>
         </div>
       </div>
@@ -159,14 +159,14 @@
         </p>
 
         <div class="user-guide-exchange">
-          <p class="user-guide-img"><img src="images/guide-exchange1.png" alt="商品画面"></p>
+          <p class="user-guide-img"><img src="{{ url_for('static', filename='images/guide-exchange1.png') }}" alt="商品画面"></p>
           <p class="user-guide-img-p">&#9312;物々交換ボタンをクリックします&#12290;</p>
         </div>
 
         <hr>
       
         <div class="user-guide-exchange">
-          <p class="user-guide-img"><img src="images/guide-exchange2.png" alt="物々交換提案画面"></p>
+          <p class="user-guide-img"><img src="{{ url_for('static', filename='images/guide-exchange2.png') }}" alt="物々交換提案画面"></p>
           <p class="user-guide-img-p">&#9313;提案する商品を選択します&#12290;</p><br>
           <p class="user-guide-img-p">&#9314;提案する商品の説明を入力します&#12290;</p>
         </div>
@@ -174,7 +174,7 @@
         <hr>
       
         <div class="user-guide-exchange">
-          <p class="user-guide-img"><img src="images/guide-exchange3.png" alt="物々交換画面"></p>
+          <p class="user-guide-img"><img src="{{ url_for('static', filename='images/guide-exchange3.png') }}" alt="物々交換画面"></p>
           <p class="user-guide-img-p">&#9315;提案するボタンをクリックして完了です&#12290;</p>
         </div>
 
@@ -188,35 +188,35 @@
         </p>
 
         <div class="user-guide-column">
-          <p class="user-guide-img"><img src="images/guide-column1.png" alt="商品画面"></p>
+          <p class="user-guide-img"><img src="{{ url_for('static', filename='images/guide-column1.png') }}" alt="商品画面"></p>
           <p class="user-guide-img-p">&#9312;タイトルを入力します&#12290;</p>
         </div>
   
         <hr>
         
         <div class="user-guide-column">
-          <p class="user-guide-img"><img src="images/guide-column2.png" alt="物々交換提案画面"></p>
+          <p class="user-guide-img"><img src="{{ url_for('static', filename='images/guide-column2.png') }}" alt="物々交換提案画面"></p>
           <p class="user-guide-img-p">&#9313;画像を選択します&#12290;</p><br>
         </div>
 
         <hr>
         
         <div class="user-guide-column">
-          <p class="user-guide-img"><img src="images/guide-column3.png" alt="物々交換提案画面"></p>
+          <p class="user-guide-img"><img src="{{ url_for('static', filename='images/guide-column3.png') }}" alt="物々交換提案画面"></p>
           <p class="user-guide-img-p">&#9314;コラムの内容を書きます&#12290;</p><br>
           <p class="user-guide-img-p">&#9315;投稿ボタンをクリックして完了です&#12290;</p>
         </div>
         <hr>
         
         <div class="user-guide-column">
-          <p class="user-guide-img"><img src="images/guide-column4.png" alt="物々交換提案画面"></p>
+          <p class="user-guide-img"><img src="{{ url_for('static', filename='images/guide-column4.png') }}" alt="物々交換提案画面"></p>
           <p class="user-guide-img-p">&#9316;hortus会員のコラムを検索することができ、閲覧することが出来ます&#12290;</p><br>
         </div>
   
         <hr>
         
         <div class="user-guide-column">
-          <p class="user-guide-img"><img src="images/guide-column5.png" alt="物々交換画面"></p>
+          <p class="user-guide-img"><img src="{{ url_for('static', filename='images/guide-column5.png') }}" alt="物々交換画面"></p>
           <p class="user-guide-img-p">&#9317;自身が投稿したコラムの一覧も見ることが出来ます&#12290;</p>
         </div>
       </div>
@@ -239,28 +239,28 @@
         </p>
   
         <div class="user-guide-personal">
-          <p class="user-guide-img"><img src="images/guide-personal1.png" alt="TOP画面"></p>
+          <p class="user-guide-img"><img src="{{ url_for('static', filename='images/guide-personal1.png') }}" alt="TOP画面"></p>
           <p class="user-guide-img-p">&#9312;診断スタートボタンをクリックします&#12290;</p>
         </div>
   
         <hr>
         
         <div class="user-guide-exchange">
-          <p class="user-guide-img"><img src="images/guide-personal2.png" alt="パーソナル診断スタート画面"></p>
+          <p class="user-guide-img"><img src="{{ url_for('static', filename='images/guide-personal2.png') }}" alt="パーソナル診断スタート画面"></p>
           <p class="user-guide-img-p">&#9313;診断スタートボタンをクリックします&#12290;</p>
         </div>
   
         <hr>
         
         <div class="user-guide-exchange">
-          <p class="user-guide-img"><img src="images/guide-personal3.png" alt="パーソナル診断問いかけ中画面"></p>
+          <p class="user-guide-img"><img src="{{ url_for('static', filename='images/guide-personal3.png') }}" alt="パーソナル診断問いかけ中画面"></p>
           <p class="user-guide-img-p">&#9314;選択肢のボタンをクリックします&#12290;</p>
         </div>
 
         <hr>
         
         <div class="user-guide-exchange">
-          <p class="user-guide-img"><img src="images/guide-personal4.png" alt="診断結果画面"></p>
+          <p class="user-guide-img"><img src="{{ url_for('static', filename='images/guide-personal4.png') }}" alt="診断結果画面"></p>
           <p class="user-guide-img-p">&#9315;診断結果が表示されて完了です&#12290;</p>
         </div>
   
@@ -272,7 +272,7 @@
             何かご不明点がございましたらお気軽に下記のリンクより送信してください&#12290;
             お客様から頂いたお問い合わせは確認させて頂いたのち堅実に反映させて頂きます&#12290;
         </p>
-        <a href="inquiry.html" id="user-guide-a">お問い合わせはこちらから</a>
+        <a href="{{ url_for('main.inquiry') }}" id="user-guide-a">お問い合わせはこちらから</a>
       </div>
 
       <div id="area-11">
@@ -282,7 +282,7 @@
             手続きが完了しますと、ご登録いただきました情報、購入履歴などの一切が削除されます&#12290;<br>
             あらかじめご了承ください&#12290;<br>
         </p>
-        <a href="mypage.html" id="user-guide-a">マイページはこちらから</a>
+        <a href="{{ url_for('main.mypage') }}" id="user-guide-a">マイページはこちらから</a>
       </div>
 
     </div>
@@ -293,8 +293,8 @@
 
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"
     integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-  <script src="js/common.js"></script>
-  <script src="js/user-guide.js"></script>
+  <script src="{{ url_for('static', filename='js/common.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/user-guide.js') }}"></script>
 </body>
 
 </html>
