--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -1,71 +1,62 @@
 @charset "UTF-8";
 
-.container {
-    background-color: #fff;
-    margin: auto;
-    padding: 120px 0;
-    display:  flex;
-    justify-content: center;
-    align-items:center;
+div.wrap {
+  display: flex;
+  flex-wrap: wrap;
+  width: 1000px;
 }
-
-.user-details {
-    padding: 20px 50px;
-    margin: 0 50px;
+div#wrap div#mypage {
+  margin: 0 auto;
 }
-.user-details p{
-    margin: 30px 0;
+div#wrap div#mypage h1 {
+  text-align: center;
+  font-size: 1.8rem;
+  margin: 20px auto;
+  font-family: serif;
 }
-
-.icon, .user-details {
-    align-self: flex-start;
-    border: solid 1px #000;
-    box-shadow: 0 0 10px rgba(0,0,1,0.1);
-}
-
-
-
-.m-button{
+div#wrap div#mypage div#member-information {
+  text-align: center;
+  font-size: 1.1rem;
+  font-family: serif;
+  margin: 0 auto 20px auto;
   text-align: center;
 }
-
-.m-button p{
-  width: 200px;
-  margin: 20px auto;
-  padding: 10px 20px;
-  border-radius: 4px;
-  background-color: rgba(55, 145, 75, 0.9);
-  font-size: 1rem;
-  font-weight: 700;
-  color: whitesmoke;
-  cursor: pointer;
-  transition: all 0.3s ease;
+div#wrap div#mypage div#member-information table#information-table {
+  margin: 0 auto;
+  border-collapse: collapse;
+  border: 1px solid #000;
 }
-
-.Listing-button,.inquiry{
-  width: 200px;
-  margin: 20px auto;
-  padding: 10px 20px;
-  border-radius: 4px;
-  background-color: rgba(55, 145, 75, 0.9);
-  font-size: 1rem;
-  font-weight: 700;
-  color: whitesmoke;
-  cursor: pointer;
-  transition: all 0.3s ease;
+div#wrap div#mypage div#member-information table#information-table tr th.info {
+  border: 1px solid #000;
+  background: #dcdddd;
+  padding: 5px 20px;
+}
+div#wrap
+  div#mypage
+  div#member-information
+  table#information-table
+  tr
+  td.registration-content {
+  border: 1px solid #000;
+  padding: 5px 50px 5px 20px;
+}
+div#wrap div#procedure {
+  font-family: serif;
   text-align: center;
+  padding: 20px 0 20px 0;
 }
-.inquiry{
-  background-color: rgba(108, 105, 105, 0.9);
+div#wrap div#procedure div#listing{
+  font-family: serif;
+  display: inline-block;
+  padding: 8px 140px;
+  text-decoration: none;
+  color: #fff;
+  font-size: 1.3rem;
+  background-color: #37914b;
+  border-radius: 4px;
+  cursor: pointer;
 }
-
-.Listing-button:hover{
-  background-color: #366841;
+div#wrap div#procedure div.history {
+  font-family: serif;
+  margin: 20px auto;
 }
-.inquiry:hover{
-  background-color: #2c2c2c;
-}
-
-
-
-
