--- a/static/css/exchange-list.css
+++ b/static/css/exchange-list.css
@@ -7,7 +7,6 @@ div#exchange-list-wrap {
     margin: 20px auto;
     background-color: #fff;
     padding: 20px;
-    border-radius: 10px;
 }
 
 h1 {
@@ -30,6 +29,8 @@ h2 {
     /* max-width: 1000px; */
     display: flex;
     margin-bottom: 40px;
+    /* background-color: #DBDBDB; */
+    border-radius: 10px;
 }
 
 table {
@@ -73,21 +74,20 @@ table td {
 /* 交換する！しない！ボタン */
 .exchange-list-container-button {
     display: flex;
-    flex-flow: column;
-}
-
-.exchange-list-container-button-in {
+    flex-direction: column;
+    align-items: center;
     width: 30%;
 }
 
 button {
-    width: 150px;
+    width: 110px;
     padding: 10px 30px;
     border: none;
     outline: none;
     background-color: rgba(55, 145, 75, 0.9);
     color: white;
     border-radius: 0.25em;
+    margin-top: 10px;
     margin-bottom: 10px;
     text-align: center;
     white-space: nowrap;
@@ -98,10 +98,33 @@ button {
     background-color: rgba(56, 95, 65, 0.9);
 }
 .no-button {
+    padding: 10px 20px;
     background-color: #ED1C1C;
 }
 
 .no-button:hover {
     cursor: pointer;
     background-color: #ee4c4e;
+}
+
+/* ウインドウサイズに合わせる1000px以下 */
+@media (max-width: 768px) {
+    table {
+        width: 100%;
+        height: 100%;
+    }
+
+    .exchange-list-container {
+        display: block;
+        margin-bottom: 40px;
+        border-radius: 10px;
+    }
+
+    .exchange-list-container-button {
+        width: auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
 }
