--- a/templates/my-listing.html
+++ b/templates/my-listing.html
@@ -24,9 +24,9 @@
     />
 
     <title>my-listing</title>
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/common.css" />
-    <link rel="stylesheet" href="css/my-listing.css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/reset.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/common.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/my-listing.css') }}">
   </head>
 
   <body>
