--- a/templates/personal-diagnosis-start.html
+++ b/templates/personal-diagnosis-start.html
@@ -24,9 +24,9 @@
     />
 
     <title>start</title>
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/common.css" />
-    <link rel="stylesheet" href="css/personal-diagnosis-start.css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/reset.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/common.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/personal-diagnosis-start.css') }}">
   </head>
 
   <body class="start">
