--- a/templates/product-detail.html
+++ b/templates/product-detail.html
@@ -18,9 +18,9 @@
   <title>
     商品詳細ページ
   </title>
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/common.css">
-  <link rel="stylesheet" href="css/product-detail.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/reset.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/common.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/product-detail.css') }}">
 </head>
 
 <body>
