--- a/templates/column.html
+++ b/templates/column.html
@@ -5,9 +5,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>コラム一覧</title>
-        <link rel="stylesheet" href="css/reset.css">
-        <link rel="stylesheet" href="css/common.css">
-        <link rel="stylesheet" href="css/column.css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/reset.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/common.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/column.css') }}">
     </head>
 
     <body>
