etc:JSをjinjaに書き換え

--- a/templates/column/Column-editing.html
+++ b/templates/column/Column-editing.html
@@ -105,10 +105,9 @@
       integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
       crossorigin="anonymous"
     ></script>
-
-    <script src="js/column-editing.js"></script>
+    <script src="{{ url_for('static', filename='js/column-editing.js') }}"></script>
     
-
+    
 
   </body>
 </html>
