--- a/templates/column/column-post.html
+++ b/templates/column/column-post.html
@@ -105,7 +105,7 @@
       integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
       crossorigin="anonymous"
     ></script>
-    <script src="js/column-post.js"></script>
+    <script src="{{ url_for('static', filename='js/column-post.js') }}"></script>   
 
     
 
