etc css jinja 書き換え

--- a/templates/notice3.html
+++ b/templates/notice3.html
@@ -19,9 +19,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
 
   <title>登録品種を出品する際の注意事項（種苗法について）</title>
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/common.css">
-  <link rel="stylesheet" href="css/notice3.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/reset.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/common.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/notice3.css') }}">
 </head>
 
 <body>
