--- a/templates/column/Column-editing.html
+++ b/templates/column/Column-editing.html
@@ -24,9 +24,9 @@
     />
 
     <title>コラム編集ページ</title>
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/common.css" />
-    <link rel="stylesheet" href="css/column-editing.css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/reset.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/common.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/column-editing.css') }}">
 
   </head>
 
