--- a/templates/column/column-post.html
+++ b/templates/column/column-post.html
@@ -24,9 +24,9 @@
     />
 
     <title>top</title>
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/common.css" />
-    <link rel="stylesheet" href="css/column-post.css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/reset.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/common.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/column-post.css') }}">
 
   </head>
 
