--- a/templates/notice.html
+++ b/templates/notice.html
@@ -19,9 +19,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet">
 
   <title>STOP詐欺被害 − 違反行為の勧誘を断り、安全な取引を心がけましょう</title>
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/common.css">
-  <link rel="stylesheet" href="css/notice.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/reset.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/common.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/notice.css') }}">
 </head>
 
 <body>
