--- a/templates/index.html
+++ b/templates/index.html
@@ -44,6 +44,12 @@
       <div class="nav-text">
         <a href="top.html">トップに戻る</a>
       </div>
+      <div class="nav-text">
+        <a href="top.html">使い方</a>
+      </div>
+      <div class="nav-text">
+        <a href="top.html">お問い合わせ</a>
+      </div>
     </div>
   </nav>
   
